Artificial data update
Definition of functions for section 1 and comments over fixing M and work plan of section 1

--- a/2021-11-22_Prototype.ipynb
+++ b/2021-11-22_Prototype.ipynb
@@ -10,7 +10,7 @@
     "# GLOBAL VARIABLES. BE SURE NOT TO OVERWRITE THEM\n",
     "D = 50 # Amount of documents\n",
     "V = 100 # Size of the vocabulary\n",
-    "M = 10 # Maximum amount of same word repetition in a document\n",
+    "M = 10 # Maximum amount of same word repetition in a document -> This should be sampled (FA)\n",
     "k = 5 # Amount of topics"
    ]
   },
@@ -49,16 +49,44 @@
    "source": [
     "# OUTPUT:\n",
     "class SIM:  # I'm using a class as a namespace - SIM = Simulation\n",
-    "    W = None # matrix of D×V where Wd,n is counter of appearances of the word n in document d\n",
-    "    Z = None\n",
-    "    B = None\n",
-    "    C = None\n",
-    "    E = None\n",
+    "    W = None # matrix of D×V where Wdn is counter of appearances of the word n in document d\n",
+    "    Z = None # matrix of DxVxM where Zdnm is the topic index from which the m-th appearance of the word n on doc d is drawn\n",
+    "    B = None # matrix of kxV where Bz is the parameter vector of the distribution for the z-th topic\n",
+    "    C = None # matrix of kxV where Cz is the count vec of sampled topics over each word for all docs\n",
+    "    E = None # matrix of Dxk where Ed is the count vec of sampled drawings for topic z over all words for each doc\n",
     "    Theta = None  # This is just a transformation of H\n",
-    "    H = None\n",
-    "    Sigma = None\n",
+    "    H = None # H_d is eta_d\n",
     "    G = None  # Adjacency Matrix (Check also python package \"networkx\" for graph objects!)\n",
-    "    K = None  # This is just the reverse of sigma"
+    "    K = None  # Precision matrix of G\n",
+    "    Sigma = None # Inverse of K\n",
+    "    \n",
+    "    # Don't know how much these are necessary but\n",
+    "    def __init__(D, V, k):\n",
+    "        # Create zero matrices for all possible matrices\n",
+    "        self.W = np.zeros((D, V))\n",
+    "        # Z shouldn't be created before W is sampled\n",
+    "    \n",
+    "    # Generations\n",
+    "    def sample_Z(self):\n",
+    "        # Multinomial drawing\n",
+    "    \n",
+    "    def sample_W(self):\n",
+    "        # Multinomial drawing\n",
+    "    \n",
+    "    # Transformations\n",
+    "    def update_Theta(self):\n",
+    "        self.Theta = np.log(self.H)\n",
+    "    \n",
+    "    def update_E(self):\n",
+    "        for topic in range(1, k+1):\n",
+    "            E[] = np.sum(Z_full == topic, axis=2).sum(axis=1)\n",
+    "    \n",
+    "    def update_C(self):\n",
+    "        for topic in range(1, k+1):\n",
+    "            self.B[topic] = np.sum(self.Z == topic, axis=2).sum(axis=0)\n",
+    "        \n",
+    "    def update_B(self):\n",
+    "        self.B = np.sum(self.Z == topic, axis=2).sum(axis=0)"
    ]
   },
   {
@@ -125,7 +153,17 @@
     }
    ],
    "source": [
-    "etc..."
+    "'''\n",
+    "Step 1 (Anas):\n",
+    "- Beta -> Set some convenient alpha to have an informative sample (maybe needs some playing), get matrix B\n",
+    "- G -> Generate the graph to generate K to generate Sigma\n",
+    "- Eta -> Matrix H from the multivariate Normal to generate matrix Theta\n",
+    "\n",
+    "Generate around 3 functions with the following outputs:\n",
+    "1. B\n",
+    "2. (G, K, Sigma)\n",
+    "3. (H, Theta)\n",
+    "'''"
    ]
   },
   {
@@ -134,7 +172,14 @@
    "id": "b3c055ae",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "Step 2 (Francesca):\n",
+    "- Matrix Z -> Will come from the multinomial given H/Theta\n",
+    "- Matrix W -> Will come from the multinomial given Z, B\n",
+    "- Matrices C, E -> Will come from Z\n",
+    "'''"
+   ]
   },
   {
    "cell_type": "code",
@@ -649,9 +694,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8 (d2)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "d2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -663,7 +708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
