Update init and sample_W

--- a/2021-11-22_Prototype.ipynb
+++ b/2021-11-22_Prototype.ipynb
@@ -10,7 +10,7 @@
     "# GLOBAL VARIABLES. BE SURE NOT TO OVERWRITE THEM\n",
     "D = 50 # Amount of documents\n",
     "V = 100 # Size of the vocabulary\n",
-    "M = 10 # Maximum amount of same word repetition in a document -> This should be sampled (FA)\n",
+    "M = 10 # Maximum amount of same word repetition in a document\n",
     "k = 5 # Amount of topics"
    ]
   },
@@ -54,21 +54,48 @@
     "    B = None # matrix of kxV where Bz is the parameter vector of the distribution for the z-th topic\n",
     "    C = None # matrix of kxV where Cz is the count vec of sampled topics over each word for all docs\n",
     "    E = None # matrix of Dxk where Ed is the count vec of sampled drawings for topic z over all words for each doc\n",
-    "    Theta = None  # This is just a transformation of H\n",
     "    H = None # H_d is eta_d\n",
+    "    Theta = None  # This is just a transformation of H\n",
     "    G = None  # Adjacency Matrix (Check also python package \"networkx\" for graph objects!)\n",
     "    K = None  # Precision matrix of G\n",
     "    Sigma = None # Inverse of K\n",
+    "    \n",
+    "    # Remember we will have indexes starting from 0 so all max are -=1\n",
     "    \n",
     "    # Don't know how much these are necessary but\n",
     "    def __init__(D, V, k):\n",
     "        # Create zero matrices for all possible matrices\n",
     "        self.W = np.zeros((D, V))\n",
-    "        # Z shouldn't be created before W is sampled\n",
+    "        self.B = np.zeros((k, V))\n",
+    "        self.C = np.zeros((k, V))\n",
+    "        self.E = np.zeros((D, k))\n",
+    "        self.H = np.zeros((D, k))\n",
+    "        self.Theta = np.zeros((D, k))\n",
+    "        self.G = np.zeros((k, k))\n",
+    "        self.K = np.zeros((k, k))\n",
+    "        self.Sigma = np.zeros((k, k))\n",
+    "        # Z shouldn't be created before W is sampled (depends if generated or read)\n",
     "    \n",
     "    # Generations\n",
+    "    def sample_W(self, method, M, Z, B):\n",
+    "        # We use M as the maximum repetitions of words\n",
+    "        # Hence, for each word in V in each document, we throw a randint(0,M) for the generative process\n",
+    "        for d in range(0,D):\n",
+    "            for n in range(0,V):\n",
+    "                if method == 'from_M':\n",
+    "                    # Check M != 0\n",
+    "                    # Correct: Use randint from numpy\n",
+    "                    W[d,n] = rd.randint(0,M)\n",
+    "                elif method == 'from_Z':\n",
+    "                    # Check B, Z != 0\n",
+    "                    # Multinomial drawing from Z, B\n",
+    "                    np.random.multinomial()\n",
+    "                else\n",
+    "                    print('Error: No match between method and inputs')\n",
+    "        \n",
     "    def sample_Z(self):\n",
-    "        # Multinomial drawing\n",
+    "        # Multinomial drawing from H\n",
+    "        np.random.multinomial(20, [1/6.]*6, size=1)\n",
     "    \n",
     "    def sample_W(self):\n",
     "        # Multinomial drawing\n",
@@ -86,7 +113,10 @@
     "            self.B[topic] = np.sum(self.Z == topic, axis=2).sum(axis=0)\n",
     "        \n",
     "    def update_B(self):\n",
-    "        self.B = np.sum(self.Z == topic, axis=2).sum(axis=0)"
+    "        self.B = np.sum(self.Z == topic, axis=2).sum(axis=0)\n",
+    "        \n",
+    "    # Initializing with real data\n",
+    "    # def save_W()"
    ]
   },
   {
