Update of sample_W and transformations

--- a/2021-11-22_Prototype.ipynb
+++ b/2021-11-22_Prototype.ipynb
@@ -42,6 +42,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "early-nickname",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "id": "3615ef55",
    "metadata": {},
@@ -82,14 +92,12 @@
     "        # Hence, for each word in V in each document, we throw a randint(0,M) for the generative process\n",
     "        for d in range(0,D):\n",
     "            for n in range(0,V):\n",
-    "                if method == 'from_M':\n",
-    "                    # Check M != 0\n",
-    "                    # Correct: Use randint from numpy\n",
-    "                    W[d,n] = rd.randint(0,M)\n",
+    "                if method == 'from_M' and M != 0:\n",
+    "                    W[d,n] = np.random.randint(0,M)\n",
     "                elif method == 'from_Z':\n",
     "                    # Check B, Z != 0\n",
     "                    # Multinomial drawing from Z, B\n",
-    "                    np.random.multinomial()\n",
+    "                    np.random.multinomial() # amount of samples, params, size=repetitions\n",
     "                else\n",
     "                    print('Error: No match between method and inputs')\n",
     "        \n",
@@ -106,14 +114,16 @@
     "    \n",
     "    def update_E(self):\n",
     "        for topic in range(1, k+1):\n",
-    "            E[] = np.sum(Z_full == topic, axis=2).sum(axis=1)\n",
+    "            E[topic,:] = np.sum(self.Z == topic, axis=2).sum(axis=1)\n",
     "    \n",
     "    def update_C(self):\n",
     "        for topic in range(1, k+1):\n",
-    "            self.B[topic] = np.sum(self.Z == topic, axis=2).sum(axis=0)\n",
+    "            self.B[topic, :] = np.sum(self.Z == topic, axis=2).sum(axis=0)\n",
     "        \n",
     "    def update_B(self):\n",
-    "        self.B = np.sum(self.Z == topic, axis=2).sum(axis=0)\n",
+    "        # Note this is the transformation from C\n",
+    "        for topic in range(0, k):\n",
+    "            self.B[topic] = self.C[topic] / sum(self.C[topic])\n",
     "        \n",
     "    # Initializing with real data\n",
     "    # def save_W()"
@@ -126,63 +136,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# What follows is just an example..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "e6d4d6e7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "8699c186",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.69646919, 0.28613933, 0.22685145, 0.55131477, 0.71946897],\n",
-       "       [0.42310646, 0.9807642 , 0.68482974, 0.4809319 , 0.39211752],\n",
-       "       [0.34317802, 0.72904971, 0.43857224, 0.0596779 , 0.39804426],\n",
-       "       [0.73799541, 0.18249173, 0.17545176, 0.53155137, 0.53182759],\n",
-       "       [0.63440096, 0.84943179, 0.72445532, 0.61102351, 0.72244338]])"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Generating matrix Sigma\n",
-    "np.random.seed(123)\n",
-    "SIM.Sigma = np.random.random((k, k))\n",
-    "SIM.Sigma"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "2778fec8",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (572798405.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_5560/572798405.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    etc...\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
     "'''\n",
     "Step 1 (Anas):\n",
     "- Beta -> Set some convenient alpha to have an informative sample (maybe needs some playing), get matrix B\n",
@@ -193,8 +146,21 @@
     "1. B\n",
     "2. (G, K, Sigma)\n",
     "3. (H, Theta)\n",
+    "\n",
+    "Step 2 (Francesca):\n",
+    "- Matrix Z -> Will come from the multinomial given H/Theta\n",
+    "- Matrix W -> Will come from the multinomial given Z, B\n",
+    "- Matrices C, E -> Will come from Z\n",
     "'''"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e6d4d6e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -202,14 +168,7 @@
    "id": "b3c055ae",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "'''\n",
-    "Step 2 (Francesca):\n",
-    "- Matrix Z -> Will come from the multinomial given H/Theta\n",
-    "- Matrix W -> Will come from the multinomial given Z, B\n",
-    "- Matrices C, E -> Will come from Z\n",
-    "'''"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
