Finished step 2 of Artificial Data
Left the architecture for step 1.
Further idea would be to create a class prior to store the hyperparameters, since we'll have a real version and the version we have on the pdf, just as the SIM class will have a real one where we generate the real data and the other one will have the learning process

--- a/2021-11-22_Prototype.ipynb
+++ b/2021-11-22_Prototype.ipynb
@@ -87,46 +87,92 @@
     "        # Z shouldn't be created before W is sampled (depends if generated or read)\n",
     "    \n",
     "    # Generations\n",
-    "    def sample_W(self, method, M, Z, B):\n",
+    "    def generate_W(self, method, M):\n",
     "        # We use M as the maximum repetitions of words\n",
     "        # Hence, for each word in V in each document, we throw a randint(0,M) for the generative process\n",
-    "        for d in range(0,D):\n",
-    "            for n in range(0,V):\n",
-    "                if method == 'from_M' and M != 0:\n",
-    "                    W[d,n] = np.random.randint(0,M)\n",
-    "                elif method == 'from_Z':\n",
-    "                    # Check B, Z != 0\n",
-    "                    # Multinomial drawing from Z, B\n",
-    "                    np.random.multinomial() # amount of samples, params, size=repetitions\n",
-    "                else\n",
-    "                    print('Error: No match between method and inputs')\n",
+    "        if method == 'from_M' and M != 0:\n",
+    "            for d in range(D):\n",
+    "                for n in range(V):\n",
+    "                    self.W[d,n] = np.random.randint(0,M)\n",
+    "            print('Success: W generated from M')\n",
+    "            return 0\n",
+    "        elif method == 'from_Z' and np.sum(self.B, axis=1).sum(axis=0) > 0 and np.sum(self.Z, axis=1).sum(axis=0) > 0 :\n",
+    "            # Multinomial drawing from Z, B\n",
+    "            # Params: samples (counts), probabilities, repetitions (different vectors)\n",
+    "            # np.random.multinomial(1, self.B[Z[d,n,m]], size=1)\n",
+    "            # This will give a canonical vector over V\n",
+    "            for d in range(D):\n",
+    "                for n in range(V):\n",
+    "                    for m in range(len(Z[d,n])):\n",
+    "                        self.W[d] += np.random.multinomial(1, self.B[Z[d,n,m]], size=1)\n",
+    "            print('Success: W generated from Z')\n",
+    "            return 0\n",
+    "        else\n",
+    "            print('Error: Input 0 for the chosen method')\n",
+    "            return 1\n",
     "        \n",
-    "    def sample_Z(self):\n",
-    "        # Multinomial drawing from H\n",
-    "        np.random.multinomial(20, [1/6.]*6, size=1)\n",
-    "    \n",
-    "    def sample_W(self):\n",
-    "        # Multinomial drawing\n",
+    "    def generate_Z(self):\n",
+    "        # Multinomial drawing from Theta, because it has to be normalized\n",
+    "        # np.random.multinomial(1, self.Theta[d], size=1)\n",
+    "        # This will give a canonical vector over k\n",
+    "        if np.sum(self.Theta, axis=1).sum(axis=0) == 0:\n",
+    "            print('Error: Theta matrix 0')\n",
+    "            return 1\n",
+    "        for d in range(D):\n",
+    "            for n in range(V):\n",
+    "                for m in range(self.W[d,n]):\n",
+    "                    mult = np.random.multinomial(1, self.Theta[d], size=1)\n",
+    "                    self.Z[d,n,m] = np.where(mult == 1)\n",
+    "        print('Success: Z generated from Theta')\n",
+    "        return 0\n",
     "    \n",
     "    # Transformations\n",
     "    def update_Theta(self):\n",
-    "        self.Theta = np.log(self.H)\n",
+    "        for d in range(D):\n",
+    "            self.Theta[d] = np.exp(self.H[d]) / np.sum(np.exp(self.H[d]), axis=0)\n",
+    "        print('Success: Theta transformed from H')\n",
+    "        return 0\n",
     "    \n",
     "    def update_E(self):\n",
     "        for topic in range(1, k+1):\n",
     "            E[topic,:] = np.sum(self.Z == topic, axis=2).sum(axis=1)\n",
+    "        print('Success: E transformed from Z')\n",
+    "        return 0\n",
     "    \n",
     "    def update_C(self):\n",
     "        for topic in range(1, k+1):\n",
-    "            self.B[topic, :] = np.sum(self.Z == topic, axis=2).sum(axis=0)\n",
+    "            self.C[topic, :] = np.sum(self.Z == topic, axis=2).sum(axis=0)\n",
+    "        print('Success: C transformed from Z')\n",
+    "        return 0\n",
     "        \n",
     "    def update_B(self):\n",
     "        # Note this is the transformation from C\n",
     "        for topic in range(0, k):\n",
     "            self.B[topic] = self.C[topic] / sum(self.C[topic])\n",
-    "        \n",
+    "        print('Success: B transformed from C')\n",
+    "        return 0\n",
+    "    \n",
+    "    def update_Sigma(self):\n",
+    "        self.Sigma = np.linalg.inv(self.K)\n",
+    "        print('Success: Sigma transformed from K')\n",
+    "        return 0\n",
+    "    \n",
     "    # Initializing with real data\n",
-    "    # def save_W()"
+    "    # def save_W()\n",
+    "    \n",
+    "    # Priors (Anas)\n",
+    "    def sample_B(self, alpha):\n",
+    "        # Dirichlet\n",
+    "        \n",
+    "    def sample_GK(self, gamma):\n",
+    "        # Bernoulli for G\n",
+    "        # G-Wishart for K given G\n",
+    "        update_Sigma()\n",
+    "    \n",
+    "    def sample_H(self, alpha):\n",
+    "        # Multivariate Normal\n",
+    "        update_Theta()\n",
+    "        "
    ]
   },
   {
