--- a/2021-11-22_Prototype.ipynb
+++ b/2021-11-22_Prototype.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "0aaacfe7",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "e4b86e59",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "912fe9c7",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
     "                        self.W[d] += np.random.multinomial(1, self.B[Z[d,n,m]], size=1)\n",
     "            print('Success: W generated from Z')\n",
     "            return 0\n",
-    "        else\n",
+    "        else:\n",
     "            print('Error: Input 0 for the chosen method')\n",
     "            return 1\n",
     "        \n",
@@ -163,6 +163,7 @@
     "    # Priors (Anas)\n",
     "    def sample_B(self, alpha):\n",
     "        # Dirichlet\n",
+    "        return None\n",
     "        \n",
     "    def sample_GK(self, gamma):\n",
     "        # Bernoulli for G\n",
@@ -177,10 +178,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "cad9d685",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nStep 1 (Anas):\\n- Beta -> Set some convenient alpha to have an informative sample (maybe needs some playing), get matrix B\\n- G -> Generate the graph to generate K to generate Sigma\\n- Eta -> Matrix H from the multivariate Normal to generate matrix Theta\\n\\nGenerate around 3 functions with the following outputs:\\n1. B\\n2. (G, K, Sigma)\\n3. (H, Theta)\\n\\nStep 2 (Francesca):\\n- Matrix Z -> Will come from the multinomial given H/Theta\\n- Matrix W -> Will come from the multinomial given Z, B\\n- Matrices C, E -> Will come from Z\\n'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "Step 1 (Anas):\n",
@@ -202,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "f859cefb",
    "metadata": {},
    "outputs": [],
@@ -234,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "3298eaf4",
    "metadata": {},
    "outputs": [],
@@ -248,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "c0df34b7",
    "metadata": {},
    "outputs": [],
@@ -278,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "a55f950f",
    "metadata": {},
    "outputs": [],
@@ -292,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "5d07fd0e",
    "metadata": {},
    "outputs": [
@@ -305,7 +317,7 @@
        "       0.05782566, 0.0518377 , 0.0014187 ])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "f1f38df6",
    "metadata": {},
    "outputs": [],
@@ -332,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "0c4ad239",
    "metadata": {},
    "outputs": [
@@ -346,7 +358,7 @@
        "       5.95543411e-02, 7.97316600e-02])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "b9d8e4ff",
    "metadata": {},
    "outputs": [
@@ -367,7 +379,7 @@
        "1.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "cb502a2f",
    "metadata": {},
    "outputs": [
@@ -388,7 +400,7 @@
        "5"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "818d3c6b",
    "metadata": {},
    "outputs": [
@@ -410,7 +422,7 @@
        "array([0.00775911, 0.2647408 , 0.04999273, 0.427745  , 0.24976236])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "f0e8588c",
    "metadata": {},
    "outputs": [
@@ -438,7 +450,7 @@
        "       [0.2354462 , 0.87948846, 0.45713552, 0.61474357, 0.71282345]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "id": "b61ecc6d",
    "metadata": {},
    "outputs": [],
@@ -466,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "id": "856c1242",
    "metadata": {},
    "outputs": [
@@ -474,26 +486,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0-th word drawn from topic green is square\n",
-      "1-th word drawn from topic green is glass\n",
-      "2-th word drawn from topic blue is house\n",
-      "3-th word drawn from topic green is tree\n",
-      "4-th word drawn from topic green is glass\n",
-      "5-th word drawn from topic green is glass\n",
-      "6-th word drawn from topic blue is sun\n",
-      "7-th word drawn from topic blue is palm\n",
-      "8-th word drawn from topic red is father\n",
-      "9-th word drawn from topic blue is father\n"
+      "0-th word drawn from topic yellow is spoon\n",
+      "1-th word drawn from topic yellow is mouse\n",
+      "2-th word drawn from topic blue is tree\n",
+      "3-th word drawn from topic blue is cat\n",
+      "4-th word drawn from topic green is moon\n",
+      "5-th word drawn from topic blue is mug\n",
+      "6-th word drawn from topic pink is circle\n",
+      "7-th word drawn from topic green is dog\n",
+      "8-th word drawn from topic pink is circle\n",
+      "9-th word drawn from topic green is sun\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([0., 0., 0., 1., 1., 0., 0., 0., 1., 1., 0., 1., 0., 2., 0., 0., 0.,\n",
-       "       3.])"
+       "array([1., 0., 1., 0., 0., 0., 1., 0., 0., 1., 0., 1., 1., 0., 1., 2., 1.,\n",
+       "       0.])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0688ee9f",
    "metadata": {},
    "outputs": [],
@@ -605,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "id": "52b450f9",
    "metadata": {},
    "outputs": [],
@@ -622,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "801029d2",
    "metadata": {},
    "outputs": [
@@ -663,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2a4ba377",
    "metadata": {},
    "outputs": [],
@@ -675,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "765c88db",
    "metadata": {},
    "outputs": [
@@ -708,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "4aaea7ff",
    "metadata": {},
    "outputs": [
@@ -842,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "532c0fec",
    "metadata": {},
    "outputs": [],
@@ -895,22 +907,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "id": "ed4170cd",
    "metadata": {},
    "outputs": [],
    "source": [
     "def BDMCMC_Sampling(W, Z, H):\n",
-    "    return None"
+    "    #update_G(W,Z,H,K,G)\n",
+    "    #update_K()\n",
+    "    return (G,K)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "804013e4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gamma = 0.05\n",
+    "\n",
+    "def update_G(W, Z, H, K, G):\n",
+    "\n",
+    "    N = G.shape[0]\n",
+    "    delta_K = 0\n",
+    "    beta_K = 0\n",
+    "\n",
+    "    death_rates = np.zeros((k,k))\n",
+    "    birth_rates = np.zeros((k,k))\n",
+    "\n",
+    "    PrHK = lambda K,H:      K.size**(n/2) * np.exp(-0.5*np.trace(np.matmul(np.matmul(K, np.transpose(H)), H)))\n",
+    "    PrK_G = lambda K,G,D,b: K.size**(b+D-2) * np.exp(-0.5*np.trace(np.matmul(S + np.matmul(np.transpose(H), H), K)))\n",
+    "    PrG = lambda gamma, E:  (gamma/(1-gamma))**(E.size)\n",
+    "\n",
+    "    PrKG_H = lambda K,G,H,D,b,gamma,E: PrHK(K,H)*PrK_G(K,G,D,b)*PrG(gamma,E)\n",
+    "\n",
+    "    Pr_init = PrKG_H(K,G,H,D,b,gamma,E)\n",
+    "\n",
+    "    for i in range(N):\n",
+    "        for j in range(i, N):\n",
+    "            if G[i,j]:\n",
+    "                G_loop = G\n",
+    "                G_loop[i,j], G_loop[j,i] = 0\n",
+    "                #technically, we should compute K_loop here...\n",
+    "                Pr_loop = PrKG_H(K,G_loop,H,D,b,gamma,E)\n",
+    "\n",
+    "                death_rate = Pr_loop/Pr_init\n",
+    "\n",
+    "                if death_rate > 1:\n",
+    "                    death_rate = 1\n",
+    "                death_rates[i,j], death_rates[j,i] = death_rate, death_rate\n",
+    "                delta_K += death_rate\n",
+    "\n",
+    "            else:\n",
+    "                G_loop = G\n",
+    "                G_loop[i,j], G_loop[j,i] = 1\n",
+    "                #technically, we should compute K_loop here...\n",
+    "                Pr_loop = PrKG_H(K,G_loop,H,D,b,gamma,E) \n",
+    "\n",
+    "                birth_rate = Pr_loop/Pr_init\n",
+    "\n",
+    "                if birth_rate > 1:\n",
+    "                    birth_rate = 1\n",
+    "                birth_rates[i,j], birth_rates[j,i] = birth_rate, birth_rate\n",
+    "                beta_K += birth_rate\n",
+    "    \n",
+    "    W = 1/(beta_K + delta_K)\n",
+    "\n",
+    "    pr_death = W*death_rates\n",
+    "    pr_birth = W*birth_rates\n",
+    "\n",
+    "    for i in range(N):\n",
+    "        for j in range(i, N):\n",
+    "            if pr_death[i,j] > 0.5:\n",
+    "                G[i,j], G[j,i] = 0,0\n",
+    "            elif pr_birth[i,j] > 0.5:\n",
+    "                G[i,j], G[j,i] = 1,1\n",
+    "\n",
+    "    return G\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -938,10 +1013,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "a803b5bf187bf95155bcb05f6102b06519856e9ee60d4a9ebc29561a74488513"
+  },
   "kernelspec": {
    "display_name": "Python 3.8 (d2)",
    "language": "python",
-   "name": "d2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -953,7 +1031,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
