little adjustments of update_G

--- a/2021-11-22_Prototype.ipynb
+++ b/2021-11-22_Prototype.ipynb
@@ -993,9 +993,9 @@
     "    Pr_init = PrKG_H(K,G,H,D,b,gamma,E)\n",
     "\n",
     "    for i in range(N):\n",
-    "        for j in range(i, N):\n",
+    "        for j in range(i+1, N):\n",
     "            if G[i,j]:\n",
-    "                G_loop = G\n",
+    "                G_loop = G.copy()\n",
     "                G_loop[i,j], G_loop[j,i] = 0\n",
     "                #technically, we should compute K_loop here...\n",
     "                Pr_loop = PrKG_H(K,G_loop,H,D,b,gamma,E)\n",
@@ -1008,7 +1008,7 @@
     "                delta_K += death_rate\n",
     "\n",
     "            else:\n",
-    "                G_loop = G\n",
+    "                G_loop = G.copy()\n",
     "                G_loop[i,j], G_loop[j,i] = 1\n",
     "                #technically, we should compute K_loop here...\n",
     "                Pr_loop = PrKG_H(K,G_loop,H,D,b,gamma,E) \n",
@@ -1026,7 +1026,7 @@
     "    pr_birth = W*birth_rates\n",
     "\n",
     "    for i in range(N):\n",
-    "        for j in range(i, N):\n",
+    "        for j in range(i+1, N):\n",
     "            if pr_death[i,j] > 0.5:\n",
     "                G[i,j], G[j,i] = 0,0\n",
     "            elif pr_birth[i,j] > 0.5:\n",
