--- a/2021-11-22_Prototype.ipynb
+++ b/2021-11-22_Prototype.ipynb
@@ -72,7 +72,6 @@
     "    \n",
     "    # Remember we will have indexes starting from 0 so all max are -=1\n",
     "    \n",
-    "    # Don't know how much these are necessary but\n",
     "    def __init__(D, V, k):\n",
     "        # Create zero matrices for all possible matrices\n",
     "        self.W = np.zeros((D, V))\n",
@@ -86,18 +85,28 @@
     "        self.Sigma = np.zeros((k, k))\n",
     "        # Z shouldn't be created before W is sampled (depends if generated or read)\n",
     "    \n",
+    "    def get_M(self):\n",
+    "        # Ref: https://numpy.org/doc/stable/reference/generated/numpy.matrix.max.html\n",
+    "        return W.max()\n",
+    "    \n",
     "    # Generations\n",
-    "    def generate_W(self, method, M):\n",
+    "    def generate_W_from_M(self, M):\n",
     "        # We use M as the maximum repetitions of words\n",
     "        # Hence, for each word in V in each document, we throw a randint(0,M) for the generative process\n",
-    "        if method == 'from_M' and M != 0:\n",
+    "        if M != 0:\n",
     "            for d in range(D):\n",
     "                for n in range(V):\n",
     "                    self.W[d,n] = np.random.randint(0,M)\n",
     "            print('Success: W generated from M')\n",
     "            return 0\n",
-    "        elif method == 'from_Z' and np.sum(self.B, axis=1).sum(axis=0) > 0 and np.sum(self.Z, axis=1).sum(axis=0) > 0 :\n",
+    "        else:\n",
+    "            print('Error: Input 0 for the chosen method')\n",
+    "            return 1\n",
+    "        \n",
+    "    def generate_W_from_Z(self):\n",
+    "        if np.sum(self.B, axis=1).sum(axis=0) > 0 and np.sum(self.Z, axis=1).sum(axis=0) > 0 :\n",
     "            # Multinomial drawing from Z, B\n",
+    "            # Ref https://numpy.org/doc/stable/reference/random/generated/numpy.random.multinomial.html\n",
     "            # Params: samples (counts), probabilities, repetitions (different vectors)\n",
     "            # np.random.multinomial(1, self.B[Z[d,n,m]], size=1)\n",
     "            # This will give a canonical vector over V\n",
@@ -113,6 +122,7 @@
     "        \n",
     "    def generate_Z(self):\n",
     "        # Multinomial drawing from Theta, because it has to be normalized\n",
+    "        # Ref https://numpy.org/doc/stable/reference/random/generated/numpy.random.multinomial.html\n",
     "        # np.random.multinomial(1, self.Theta[d], size=1)\n",
     "        # This will give a canonical vector over k\n",
     "        if np.sum(self.Theta, axis=1).sum(axis=0) == 0:\n",
@@ -161,88 +171,50 @@
     "    # def save_W()\n",
     "    \n",
     "    # Priors (Anas)\n",
+    "    def build_topic_distribution(seed=1234):\n",
+    "        np.random.seed(seed)\n",
+    "        vocabulary_size = V\n",
+    "        distribution = np.random.random(vocabulary_size)\n",
+    "        return distribution / distribution.sum()\n",
+    "    \n",
     "    def sample_B(self, alpha):\n",
     "        # B is the matrix whose rows are the distribution of topic i over the vocabulary\n",
     "        # Each row means : for each topic i we have the probability of word i to occur\n",
     "        # Using what Kanthavel did before\n",
-    "        ''''\n",
-    "        \n",
-    "        # nested function (is it correct ?)\n",
-    "        \n",
-    "        def build_topic_distribution(seed=1234):\n",
-    "            np.random.seed(seed)\n",
-    "            vocabulary_size = V\n",
-    "            distribution = np.random.random(vocabulary_size)\n",
-    "            return distribution / distribution.sum()\n",
-    "        \n",
     "        b = np.empty((k,V))\n",
     "        \n",
     "        for i in range(k):\n",
     "            b[i,:] = build_topic_distribution(seed=1234)\n",
     "        \n",
     "        self.B = b \n",
-    "        \n",
-    "        # Question : in a real dataset how do we find B ?\n",
-    "        \n",
-    "        # Dirichlet\n",
-    "        b = np.empty((k,V))\n",
-    "        for i in range(k):\n",
-    "            b[i,:] = np.random.dirichlet(alpha)\n",
-    "        self.B = b\n",
-    "        \n",
-    "        '''\n",
     "        return None\n",
     "        \n",
     "    def sample_GK(self, gamma):\n",
     "        # Bernoulli for G\n",
     "        # generate a random adjacency matrix\n",
-    "        '''\n",
     "        matrix = np.array([[int(bernoulli.rvs(gamma, size=1)) for i in range(n)] for j in range(n)])\n",
     "        for i in range(n):\n",
     "            matrix[i][i] = 0\n",
-    "            \n",
     "        for i in range(n):\n",
     "            for j in range(n):\n",
     "                matrix[j][i] = matrix[i][j]\n",
     "        self.G = matrix\n",
-    "        '''\n",
-    "        \n",
-    "        # G-Wishart for K given G\n",
-    "        # Question : How to link K and G ?\n",
-    "        '''\n",
     "        # I can build K for using make_sparse_spd_matrix from sklearn.datasets for example\n",
     "        self.K = make_sparse_spd_matrix(k,alpha=0.95, norm_diag=False, smallest_coef=0.1, largest_coef=0.9, random_state=None)\n",
-    "        '''\n",
-    "        self.Sigma = np.linalg.inv(K)\n",
     "        update_Sigma()\n",
     "    \n",
     "    def sample_H(self, alpha):\n",
     "        # Multivariate Normal\n",
     "        mu = np.zeros(k)\n",
     "        self.H = np.random.multivariate_gaussian(mu,Sigma,k)\n",
-    "        update_Theta()\n",
-    "        "
+    "        update_Theta()\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "cad9d685",
+   "cell_type": "markdown",
+   "id": "accessory-guest",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nStep 1 (Anas):\\n- Beta -> Set some convenient alpha to have an informative sample (maybe needs some playing), get matrix B\\n- G -> Generate the graph to generate K to generate Sigma\\n- Eta -> Matrix H from the multivariate Normal to generate matrix Theta\\n\\nGenerate around 3 functions with the following outputs:\\n1. B\\n2. (G, K, Sigma)\\n3. (H, Theta)\\n\\nStep 2 (Francesca):\\n- Matrix Z -> Will come from the multinomial given H/Theta\\n- Matrix W -> Will come from the multinomial given Z, B\\n- Matrices C, E -> Will come from Z\\n'"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "'''\n",
     "Step 1 (Anas):\n",
     "- Beta -> Set some convenient alpha to have an informative sample (maybe needs some playing), get matrix B\n",
     "- G -> Generate the graph to generate K to generate Sigma\n",
@@ -256,8 +228,7 @@
     "Step 2 (Francesca):\n",
     "- Matrix Z -> Will come from the multinomial given H/Theta\n",
     "- Matrix W -> Will come from the multinomial given Z, B\n",
-    "- Matrices C, E -> Will come from Z\n",
-    "'''"
+    "- Matrices C, E -> Will come from Z"
    ]
   },
   {
@@ -1065,7 +1036,7 @@
    "hash": "a803b5bf187bf95155bcb05f6102b06519856e9ee60d4a9ebc29561a74488513"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1079,7 +1050,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
