--- a/2021-11-22_Prototype.ipynb
+++ b/2021-11-22_Prototype.ipynb
@@ -594,237 +594,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "0688ee9f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import cmdstanpy\n",
-    "# cmdstanpy.install_cmdstan()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "52b450f9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import numpy as np\n",
-    "os.environ['CMDSTAN'] = '/home/kanthavel/.cmdstan/cmdstan-2.28.2/'\n",
-    "from cmdstanpy import cmdstan_path, CmdStanModel\n",
-    "\n",
-    "import arviz as az\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
-   "id": "801029d2",
+   "id": "82d509f5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:cmdstanpy:compiling stan program, exe file: /media/kanthavel/data/code/Bayesian_Statistics/Project/multi_normal\n",
-      "INFO:cmdstanpy:compiler options: stanc_options=None, cpp_options=None\n",
-      "INFO:cmdstanpy:compiled model file: /media/kanthavel/data/code/Bayesian_Statistics/Project/multi_normal\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "normal_code = \"\"\"\n",
-    "    data {\n",
-    "        int<lower=0> dim;\n",
-    "        matrix[dim, dim] cov_chol;\n",
-    "    }\n",
-    "    \n",
-    "    parameters {\n",
-    "        vector[dim] x;\n",
-    "    }\n",
-    "    \n",
-    "    model {\n",
-    "        vector[dim] mu = rep_vector(0, dim);\n",
-    "        x ~ multi_normal_cholesky(mu, cov_chol);\n",
-    "    }\n",
-    "\"\"\"\n",
-    "\n",
-    "stan_file = \"./multi_normal.stan\"\n",
-    "\n",
-    "with open(stan_file, \"w\") as f:\n",
-    "    print(normal_code, file=f)\n",
-    "\n",
-    "stan_model = CmdStanModel(stan_file=stan_file)"
+    "import numpy as np\n",
+    "import numpy.linalg"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2a4ba377",
+   "id": "5a838008",
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = 2\n",
-    "sigma = 0.99 ** np.abs(np.vstack([np.arange(d)] *d) - np.vstack([np.arange(d)] *d).T)\n",
-    "sigma_chol = np.linalg.cholesky(sigma)"
+    "def sampled_distribution_kernel(eta, K, E):\n",
+    "    k = eta.shape[0]\n",
+    "    eta_K_eta = -0.5 * eta.dot(K.dot(eta))\n",
+    "    E_eta = E.dot(eta)\n",
+    "    sum_eta_pow_k = np.sum(np.exp(eta)) ** k\n",
+    "    return np.exp(eta_K_eta + E_eta) / sum_eta_pow_k"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "765c88db",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:cmdstanpy:start chain 1\n",
-      "INFO:cmdstanpy:start chain 2\n",
-      "INFO:cmdstanpy:start chain 3\n",
-      "INFO:cmdstanpy:start chain 4\n",
-      "INFO:cmdstanpy:finish chain 1\n",
-      "INFO:cmdstanpy:finish chain 3\n",
-      "INFO:cmdstanpy:finish chain 2\n",
-      "INFO:cmdstanpy:finish chain 4\n"
-     ]
-    }
-   ],
-   "source": [
-    "normal_data = {\n",
-    "    \"dim\": 2,\n",
-    "    \"cov_chol\": sigma_chol\n",
-    "}\n",
-    "\n",
-    "stan_fit = stan_model.sample(data=normal_data, chains=4, parallel_chains=4, \n",
-    "                             iter_warmup=1000, iter_sampling=5000)\n",
-    "\n",
-    "cmdstanpy_data = az.from_cmdstanpy(stan_fit)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "4aaea7ff",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:cmdstanpy:compiling stan program, exe file: /media/kanthavel/data/code/Bayesian_Statistics/Project/BAY-STATS-Project-ABDPPS/multi_normal\n",
-      "INFO:cmdstanpy:compiler options: stanc_options=None, cpp_options=None\n",
-      "ERROR:cmdstanpy:file /media/kanthavel/data/code/Bayesian_Statistics/Project/BAY-STATS-Project-ABDPPS/multi_normal.stan, exception ERROR\n",
-      "Semantic error in '/media/kanthavel/data/code/Bayesian_Statistics/Project/BAY-STATS-Project-ABDPPS/multi_normal.stan', line 25, column 12 to column 41:\n",
-      "   -------------------------------------------------\n",
-      "    23:          for (i in 1:D){\n",
-      "    24:              H[i] ~ multi_normal(mu, Sigma);  \n",
-      "    25:              E[i] ~ multinomial(Theta[i]);\n",
-      "                     ^\n",
-      "    26:          }\n",
-      "    27:  \n",
-      "   -------------------------------------------------\n",
-      "\n",
-      "Ill-typed arguments to '~' statement. No distribution 'multinomial' was found with the correct signature.\n",
-      "make: *** [make/program:50: /media/kanthavel/data/code/Bayesian_Statistics/Project/BAY-STATS-Project-ABDPPS/multi_normal.hpp] Error 1 \n",
-      "ERROR:cmdstanpy:model compilation failed\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Unable to compile Stan model file: /media/kanthavel/data/code/Bayesian_Statistics/Project/BAY-STATS-Project-ABDPPS/multi_normal.stan.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_22458/1380847073.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     34\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnormal_code\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m \u001b[0mstan_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCmdStanModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstan_file\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstan_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/miniconda3/envs/d2/lib/python3.8/site-packages/cmdstanpy/model.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, model_name, stan_file, exe_file, compile, stanc_options, cpp_options, logger)\u001b[0m\n\u001b[1;32m    179\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    180\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_exe_file\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 181\u001b[0;31m                 raise ValueError(\n\u001b[0m\u001b[1;32m    182\u001b[0m                     'Unable to compile Stan model file: {}.'.format(\n\u001b[1;32m    183\u001b[0m                         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_stan_file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Unable to compile Stan model file: /media/kanthavel/data/code/Bayesian_Statistics/Project/BAY-STATS-Project-ABDPPS/multi_normal.stan."
-     ]
-    }
-   ],
-   "source": [
-    "normal_code = \"\"\"\n",
-    "    data {\n",
-    "        int<lower=0> D;\n",
-    "        int<lower=0> k;\n",
-    "        int E[D, k];\n",
-    "        matrix[k, k] Sigma;\n",
-    "        vector[k] mu;\n",
-    "    }\n",
-    "    \n",
-    "    parameters {\n",
-    "        matrix[D, k] H;\n",
-    "    }\n",
-    "    \n",
-    "    transformed parameters {\n",
-    "        matrix[D, k] Theta;\n",
-    "        for (i in 1:D) {\n",
-    "            Theta[i] = to_row_vector(softmax(to_vector(H[i])));\n",
-    "        }\n",
-    "    }\n",
-    "    \n",
-    "    model {\n",
-    "        int u;\n",
-    "        for (i in 1:D){\n",
-    "            H[i] ~ multi_normal(mu, Sigma);  \n",
-    "            E[i] ~ multinomial(Theta[i]);\n",
-    "        }\n",
-    "\n",
-    "    }\n",
-    "\"\"\"\n",
-    "\n",
-    "stan_file = \"./multi_normal.stan\"\n",
-    "\n",
-    "with open(stan_file, \"w\") as f:\n",
-    "    print(normal_code, file=f)\n",
-    "\n",
-    "stan_model = CmdStanModel(stan_file=stan_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23b08e8e",
+   "id": "21626879",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Hamiltonian_MC_Sampling(E, K, mu):\n",
+    "def H_sampler(E, Sigma, H_current=None, burn_in=100, seed=None):\n",
     "    \n",
-    "    return None"
+    "    np.random.seed(seed)\n",
+    "    \n",
+    "    K = np.linalg.inv(Sigma)\n",
+    "    \n",
+    "    D, k = E.shape  # Number of documents, Number of topics\n",
+    "    \n",
+    "    if H_current is None:\n",
+    "        H_current = np.zeros((D, k))\n",
+    "    \n",
+    "    H_sampled = np.zeros((D, k))\n",
+    "    \n",
+    "    for d in range(D):  # Iterating over each document\n",
+    "        eta_current = H_current[d]\n",
+    "        E_d = E[d]\n",
+    "        for iteration in range(burn_in + 1):\n",
+    "            \n",
+    "            # Sampling proposed eta from multivariate normal (q \"proposal density\")\n",
+    "            eta_prop = np.random.multivariate_normal(eta_current, Sigma)\n",
+    "            \n",
+    "            # Compute acceptance probability\n",
+    "            alpha = min(1, sampled_distribution_kernel(eta_prop, K, E_d) / sampled_distribution_kernel(eta_current, K, E_d))\n",
+    "            \n",
+    "            if alpha == 1 or np.random.uniform(0.0, 1.0) < alpha:\n",
+    "                eta_current = eta_prop\n",
+    "            \n",
+    "        H_sampled[d] = eta_current\n",
+    "    \n",
+    "    return H_sampled"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "126e89a3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b4bbf820",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3e8296d6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "139beab1",
+   "id": "093e9f07",
    "metadata": {},
    "source": [
     "# 2.2 MCMC Sampling"
