--- a/2021-11-22_Prototype.ipynb
+++ b/2021-11-22_Prototype.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 74,
    "id": "0aaacfe7",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,8 @@
     "D = 50 # Amount of documents\n",
     "V = 100 # Size of the vocabulary\n",
     "M = 10 # Maximum amount of same word repetition in a document\n",
-    "k = 5 # Amount of topics"
+    "k = 5 # Amount of topics\n",
+    "gamma = 0.05"
    ]
   },
   {
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "id": "e4b86e59",
    "metadata": {},
    "outputs": [],
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 83,
    "id": "912fe9c7",
    "metadata": {},
    "outputs": [],
@@ -72,7 +73,8 @@
     "    \n",
     "    # Remember we will have indexes starting from 0 so all max are -=1\n",
     "    \n",
-    "    def __init__(D, V, k):\n",
+    "    def __init__(self, D, V, k):\n",
+    "        print(D,V,k)\n",
     "        # Create zero matrices for all possible matrices\n",
     "        self.W = np.zeros((D, V))\n",
     "        self.B = np.zeros((k, V))\n",
@@ -87,7 +89,7 @@
     "    \n",
     "    def get_M(self):\n",
     "        # Ref: https://numpy.org/doc/stable/reference/generated/numpy.matrix.max.html\n",
-    "        return W.max()\n",
+    "        return self.W.max()\n",
     "    \n",
     "    # Generations\n",
     "    def generate_W_from_M(self, M):\n",
@@ -113,7 +115,7 @@
     "            for d in range(D):\n",
     "                for n in range(V):\n",
     "                    for m in range(len(Z[d,n])):\n",
-    "                        self.W[d] += np.random.multinomial(1, self.B[Z[d,n,m]], size=1)\n",
+    "                        self.W[d] += np.random.multinomial(1, self.B[self.Z[d,n,m]], size=1)\n",
     "            print('Success: W generated from Z')\n",
     "            return 0\n",
     "        else:\n",
@@ -192,7 +194,7 @@
     "    def sample_GK(self, gamma):\n",
     "        # Bernoulli for G\n",
     "        # generate a random adjacency matrix\n",
-    "        matrix = np.array([[int(bernoulli.rvs(gamma, size=1)) for i in range(n)] for j in range(n)])\n",
+    "        matrix = np.array([[int(np.random.bernoulli.rvs(gamma, size=1)) for i in range(n)] for j in range(n)])\n",
     "        for i in range(n):\n",
     "            matrix[i][i] = 0\n",
     "        for i in range(n):\n",
@@ -201,13 +203,13 @@
     "        self.G = matrix\n",
     "        # I can build K for using make_sparse_spd_matrix from sklearn.datasets for example\n",
     "        self.K = make_sparse_spd_matrix(k,alpha=0.95, norm_diag=False, smallest_coef=0.1, largest_coef=0.9, random_state=None)\n",
-    "        update_Sigma()\n",
+    "        self.update_Sigma()\n",
     "    \n",
-    "    def sample_H(self, alpha):\n",
+    "    def sample_H(self, alpha=0.95):\n",
     "        # Multivariate Normal\n",
     "        mu = np.zeros(k)\n",
-    "        self.H = np.random.multivariate_gaussian(mu,Sigma,k)\n",
-    "        update_Theta()\n"
+    "        self.H = np.random.multivariate_normal(mu,Sigma,k)\n",
+    "        self.update_Theta()\n"
    ]
   },
   {
@@ -265,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "id": "3298eaf4",
    "metadata": {},
    "outputs": [],
@@ -279,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "id": "c0df34b7",
    "metadata": {},
    "outputs": [],
@@ -309,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "id": "a55f950f",
    "metadata": {},
    "outputs": [],
@@ -323,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "id": "5d07fd0e",
    "metadata": {},
    "outputs": [
@@ -336,7 +338,7 @@
        "       0.05782566, 0.0518377 , 0.0014187 ])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "id": "f1f38df6",
    "metadata": {},
    "outputs": [],
@@ -363,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "id": "0c4ad239",
    "metadata": {},
    "outputs": [
@@ -377,7 +379,7 @@
        "       5.95543411e-02, 7.97316600e-02])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "id": "b9d8e4ff",
    "metadata": {},
    "outputs": [
@@ -398,7 +400,7 @@
        "1.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "id": "cb502a2f",
    "metadata": {},
    "outputs": [
@@ -419,7 +421,7 @@
        "5"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "id": "818d3c6b",
    "metadata": {},
    "outputs": [
@@ -441,7 +443,7 @@
        "array([0.00775911, 0.2647408 , 0.04999273, 0.427745  , 0.24976236])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "id": "f0e8588c",
    "metadata": {},
    "outputs": [
@@ -469,7 +471,7 @@
        "       [0.2354462 , 0.87948846, 0.45713552, 0.61474357, 0.71282345]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "id": "b61ecc6d",
    "metadata": {},
    "outputs": [],
@@ -497,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "id": "856c1242",
    "metadata": {},
    "outputs": [
@@ -524,7 +526,7 @@
        "       0.])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "id": "82d509f5",
    "metadata": {},
    "outputs": [],
@@ -636,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "id": "5a838008",
    "metadata": {},
    "outputs": [],
@@ -651,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "id": "21626879",
    "metadata": {},
    "outputs": [],
@@ -708,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "532c0fec",
    "metadata": {},
    "outputs": [],
@@ -761,20 +763,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "id": "ed4170cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\ndef BDMCMC_Sampling(W, Z, H):\\n    #update_G(W,Z,H,K,G)\\n    #update_K()\\n    return (G,K)\\n'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "\"\"\"\n",
     "def BDMCMC_Sampling(W, Z, H):\n",
     "    #update_G(W,Z,H,K,G)\n",
     "    #update_K()\n",
-    "    return (G,K)"
+    "    return (G,K)\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 54,
    "id": "804013e4",
    "metadata": {},
    "outputs": [],
@@ -843,11 +858,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "3e64083b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50 100 5\n",
+      "Error: Theta matrix 0\n",
+      "Error: Input 0 for the chosen method\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'numpy.random' has no attribute 'bernoulli'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-84-9858bf420301>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0msim\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgenerate_Z\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0msim\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgenerate_W_from_Z\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0msim\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msample_GK\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgamma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0msim\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msample_H\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \"\"\"\n",
+      "\u001b[1;32m<ipython-input-83-559308d69c7c>\u001b[0m in \u001b[0;36msample_GK\u001b[1;34m(self, gamma)\u001b[0m\n\u001b[0;32m    135\u001b[0m         \u001b[1;31m# Bernoulli for G\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    136\u001b[0m         \u001b[1;31m# generate a random adjacency matrix\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 137\u001b[1;33m         \u001b[0mmatrix\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbernoulli\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrvs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgamma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    138\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    139\u001b[0m             \u001b[0mmatrix\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-83-559308d69c7c>\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m    135\u001b[0m         \u001b[1;31m# Bernoulli for G\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    136\u001b[0m         \u001b[1;31m# generate a random adjacency matrix\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 137\u001b[1;33m         \u001b[0mmatrix\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbernoulli\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrvs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgamma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    138\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    139\u001b[0m             \u001b[0mmatrix\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-83-559308d69c7c>\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m    135\u001b[0m         \u001b[1;31m# Bernoulli for G\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    136\u001b[0m         \u001b[1;31m# generate a random adjacency matrix\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 137\u001b[1;33m         \u001b[0mmatrix\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbernoulli\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrvs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgamma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    138\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    139\u001b[0m             \u001b[0mmatrix\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'numpy.random' has no attribute 'bernoulli'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "sim=SIM(D, V, k)\n",
+    "sim.generate_Z()\n",
+    "sim.generate_W_from_Z()\n",
+    "sim.sample_GK(gamma)\n",
+    "sim.sample_H()\n",
+    "\"\"\"\n",
+    "W = np.array\n",
+    "\"\"\"\n",
+    "\n",
+    "G = update_G(SIM.W, SIM.Z, SIM.H, SIM.K, SIM.G)\n",
+    "print(G)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -885,7 +937,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
