--- a/2021-11-22_Prototype.ipynb
+++ b/2021-11-22_Prototype.ipynb
@@ -61,10 +61,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_topic_distribution(seed=1234):\n",
+    "# Transformation functions (deterministic)\n",
+    "\n",
+    "def update_Theta(Theta, H):\n",
+    "    for d in range(D):\n",
+    "        Theta[d] = np.exp(H[d]) / np.sum(np.exp(H[d]), axis=0)\n",
+    "    print('Success: Theta transformed from H')\n",
+    "    return Theta\n",
+    "\n",
+    "def update_E(E, Z):\n",
+    "    for topic in range(1, len(E)):\n",
+    "        E[topic,:] = np.sum(Z == topic, axis=2).sum(axis=1)\n",
+    "    print('Success: E transformed from Z')\n",
+    "    return E\n",
+    "\n",
+    "def update_C(C, Z):\n",
+    "    for topic in range(1, len(C)):\n",
+    "        C[topic, :] = np.sum(Z == topic, axis=2).sum(axis=0)\n",
+    "    print('Success: C transformed from Z')\n",
+    "    return C\n",
+    "\n",
+    "def update_B(B, C):\n",
+    "    # Note this is the transformation from C\n",
+    "    for topic in range(0, len(B)):\n",
+    "        B[topic] = C[topic] / sum(C[topic])\n",
+    "    print('Success: B transformed from C')\n",
+    "    return B\n",
+    "\n",
+    "def update_Sigma(Sigma, K):\n",
+    "    Sigma = np.linalg.inv(K)\n",
+    "    print('Success: Sigma transformed from K')\n",
+    "    return Sigma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "configured-probe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Random / Generating funtions\n",
+    "\n",
+    "def build_topic_distribution(seed):\n",
     "    np.random.seed(seed)\n",
     "    distribution = np.random.random(V)\n",
-    "    return distribution / distribution.sum()"
+    "    return distribution / distribution.sum()\n",
+    "\n",
+    "def sample_B(seed):\n",
+    "    # B is the matrix whose rows are the distribution of topic i over the vocabulary\n",
+    "    # Each row means : for each topic i we have the probability of word i to occur\n",
+    "    # Using what Kanthavel did before\n",
+    "    b = np.empty((k,V))\n",
+    "    np.random.seed(seed)\n",
+    "    for i in range(k):\n",
+    "        b[i,:] = build_topic_distribution(seed)\n",
+    "    return b\n",
+    "\n",
+    "def sample_G(k, gamma, seed):  # Won't update Sigma automatically anymore\n",
+    "    # Bernoulli for G\n",
+    "    # generate a random adjacency matrix\n",
+    "    np.random.seed(seed)\n",
+    "    matrix = np.array([[int(bernoulli.rvs(p=gamma, size=1)) for i in range(k)] for j in range(k)])\n",
+    "    for i in range(k):\n",
+    "        matrix[i][i] = 0\n",
+    "    for i in range(k):\n",
+    "        for j in range(k):\n",
+    "            matrix[j][i] = matrix[i][j]\n",
+    "    return matrix\n",
+    "\n",
+    "def sample_K(k, seed):  # Won't update Sigma automatically anymore\n",
+    "    # I can build K for using make_sparse_spd_matrix from sklearn.datasets for example\n",
+    "    np.random.seed(seed)\n",
+    "    K = make_sparse_spd_matrix(k, alpha=0.95, norm_diag=False, smallest_coef=0.1, largest_coef=0.9, random_state=None)\n",
+    "    return K\n",
+    "\n",
+    "def sample_H(Sigma, k, seed):  # Won't update Theta automatically anymore\n",
+    "    # Multivariate Normal\n",
+    "    mu = np.zeros(k)\n",
+    "    np.random.seed(seed)\n",
+    "    H = np.random.multivariate_normal(mu, Sigma, k)\n",
+    "    return H"
    ]
   },
   {
@@ -180,69 +257,34 @@
     "    \n",
     "    # Transformations\n",
     "    def update_Theta(self):\n",
-    "        for d in range(D):\n",
-    "            self.Theta[d] = np.exp(self.H[d]) / np.sum(np.exp(self.H[d]), axis=0)\n",
-    "        print('Success: Theta transformed from H')\n",
-    "        return 0\n",
+    "        self.Theta = update_Theta(self.Theta, self.H)\n",
     "    \n",
     "    def update_E(self):\n",
-    "        for topic in range(1, k+1):\n",
-    "            self.E[topic,:] = np.sum(self.Z == topic, axis=2).sum(axis=1)\n",
-    "        print('Success: E transformed from Z')\n",
-    "        return 0\n",
+    "        self.E = update_E(self.E, self.Z)\n",
     "    \n",
     "    def update_C(self):\n",
-    "        for topic in range(1, k+1):\n",
-    "            self.C[topic, :] = np.sum(self.Z == topic, axis=2).sum(axis=0)\n",
-    "        print('Success: C transformed from Z')\n",
-    "        return 0\n",
+    "        self.C = update_C(self.C, self.Z)\n",
     "        \n",
     "    def update_B(self):\n",
-    "        # Note this is the transformation from C\n",
-    "        for topic in range(0, k):\n",
-    "            self.B[topic] = self.C[topic] / sum(self.C[topic])\n",
-    "        print('Success: B transformed from C')\n",
-    "        return 0\n",
+    "        self.B = update_B(self.B, self.C)\n",
     "    \n",
     "    def update_Sigma(self):\n",
-    "        self.Sigma = np.linalg.inv(self.K)\n",
-    "        print('Success: Sigma transformed from K')\n",
-    "        return 0\n",
+    "        self.Sigma = update_Sigma(self.Sigma, self.K)\n",
     "    \n",
     "    # Initializing with real data\n",
     "    # def save_W()\n",
     "    \n",
     "    # Priors\n",
     "    def sample_B(self):\n",
-    "        # B is the matrix whose rows are the distribution of topic i over the vocabulary\n",
-    "        # Each row means : for each topic i we have the probability of word i to occur\n",
-    "        # Using what Kanthavel did before\n",
-    "        b = np.empty((k,V))\n",
+    "        self.B = sample_B(self.seed)\n",
     "        \n",
-    "        for i in range(k):\n",
-    "            b[i,:] = build_topic_distribution(seed=1234)\n",
-    "        \n",
-    "        self.B = b \n",
-    "        return None\n",
-    "        \n",
-    "    def sample_GK(self, gamma):\n",
-    "        # Bernoulli for G\n",
-    "        # generate a random adjacency matrix\n",
-    "        matrix = np.array([[int(bernoulli.rvs(p=gamma, size=1)) for i in range(k)] for j in range(k)])\n",
-    "        for i in range(k):\n",
-    "            matrix[i][i] = 0\n",
-    "        for i in range(k):\n",
-    "            for j in range(k):\n",
-    "                matrix[j][i] = matrix[i][j]\n",
-    "        self.G = matrix\n",
-    "        # I can build K for using make_sparse_spd_matrix from sklearn.datasets for example\n",
-    "        self.K = make_sparse_spd_matrix(k, alpha=0.95, norm_diag=False, smallest_coef=0.1, largest_coef=0.9, random_state=None)\n",
+    "    def sample_GK(self, gamma):  # Here we can update Sigma automatically\n",
+    "        self.G = sample_G(k, gamma, self.seed)\n",
+    "        self.K = sample_K(k, self.seed)\n",
     "        self.update_Sigma()\n",
     "    \n",
-    "    def sample_H(self):\n",
-    "        # Multivariate Normal\n",
-    "        mu = np.zeros(k)\n",
-    "        self.H = np.random.multivariate_normal(mu, self.Sigma, k)\n",
+    "    def sample_H(self):  # Here we can update Theta automatically\n",
+    "        self.H = sample_H(self.Sigma, k, self.seed)\n",
     "        self.update_Theta()\n"
    ]
   },
@@ -253,38 +295,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "97ac2eab",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "__init__() missing 1 required positional argument: 'seed'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_5110/3754321108.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSIM\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mD\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mV\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'seed'"
-     ]
-    }
-   ],
-   "source": [
-    "sim = SIM(D, V, k)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0464ffa2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sim."
-   ]
   },
   {
    "cell_type": "code",
@@ -857,9 +867,9 @@
    "hash": "a803b5bf187bf95155bcb05f6102b06519856e9ee60d4a9ebc29561a74488513"
   },
   "kernelspec": {
-   "display_name": "Python 3.8 (d2)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "d2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -871,7 +881,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
